Updated Pact to latest versions on consumer and provider side, fixed imports

--- a/consumer/pom.xml
+++ b/consumer/pom.xml
@@ -21,7 +21,8 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <java.version>14</java.version>
-    <pact.version>4.0.10</pact.version>
+    <pact.version>4.2.6</pact.version>
+    <pact.java8.version>4.1.22</pact.java8.version>
     <pact.maven.plugin.version>4.0.2</pact.maven.plugin.version>
   </properties>
 
@@ -39,23 +40,23 @@
     </dependency>
 
     <dependency>
-      <groupId>au.com.dius</groupId>
-      <artifactId>pact-jvm-consumer</artifactId>
+      <groupId>au.com.dius.pact</groupId>
+      <artifactId>consumer</artifactId>
       <version>${pact.version}</version>
       <scope>test</scope>
     </dependency>
 
     <dependency>
-      <groupId>au.com.dius</groupId>
-      <artifactId>pact-jvm-consumer-junit</artifactId>
+      <groupId>au.com.dius.pact.consumer</groupId>
+      <artifactId>junit</artifactId>
       <version>${pact.version}</version>
       <scope>test</scope>
     </dependency>
 
     <dependency>
-      <groupId>au.com.dius</groupId>
-      <artifactId>pact-jvm-consumer-java8</artifactId>
-      <version>${pact.version}</version>
+      <groupId>au.com.dius.pact.consumer</groupId>
+      <artifactId>java8</artifactId>
+      <version>${pact.java8.version}</version>
       <scope>test</scope>
     </dependency>
 
