--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,8 @@
     <version>1.0-SNAPSHOT</version>
     <description>Examples used in the Introduction to Contract Testing blog post series</description>
     <modules>
-		<module>consumer</module>
-		<module>provider</module>
+		<module>customer-consumer</module>
+		<module>order-consumer</module>
+		<module>address-provider</module>
 	</modules>	
 </project>
