--- a/order-consumer/pom.xml
+++ b/order-consumer/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>com.ontestautomation.cdct</groupId>
   <artifactId>order-consumer</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
