--- a/pom.xml
+++ b/pom.xml
@@ -12,5 +12,6 @@
 		<module>customer-consumer</module>
 		<module>order-consumer</module>
 		<module>address-provider</module>
-	</modules>	
+        <module>payment-provider</module>
+    </modules>
 </project>
