--- a/address-provider/pom.xml
+++ b/address-provider/pom.xml
@@ -16,12 +16,14 @@
     </parent>
 
     <properties>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>17</java.version>
+        <java.version>21</java.version>
         <junit.version>5.9.2</junit.version>
-        <pact.version>4.4.6</pact.version>
-        <lombok.version>1.18.28</lombok.version>
+        <pact.version>4.6.10</pact.version>
+        <lombok.version>1.18.32</lombok.version>
     </properties>
 
     <dependencies>
