--- a/order-consumer/pom.xml
+++ b/order-consumer/pom.xml
@@ -27,6 +27,7 @@
     <lombok.version>1.18.32</lombok.version>
     <wiremock.version>3.6.0</wiremock.version>
     <wiremock.pact.generator.version>2.5.0</wiremock.pact.generator.version>
+    <wiremock.pact.lib.version>0.6.0</wiremock.pact.lib.version>
   </properties>
 
 
@@ -84,9 +85,9 @@
     </dependency>
 
     <dependency>
-      <groupId>com.atlassian.ta</groupId>
-      <artifactId>wiremock-pact-generator</artifactId>
-      <version>${wiremock.pact.generator.version}</version>
+      <groupId>se.bjurr.wiremockpact</groupId>
+      <artifactId>wiremock-pact-lib</artifactId>
+      <version>${wiremock.pact.lib.version}</version>
       <scope>test</scope>
     </dependency>
 
