--- a/address-provider/pom.xml
+++ b/address-provider/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.ontestautomation.cdct</groupId>
-    <artifactId>address-provider</artifactId>
+    <artifactId>addressId-provider</artifactId>
     <version>1.0.0</version>
 
     <parent>
