--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,6 @@
     <modules>
 		<module>customer-consumer</module>
 		<module>order-consumer</module>
-		<module>address-provider</module>
+		<module>addressId-provider</module>
 	</modules>	
 </project>
