--- a/address-provider/pom.xml
+++ b/address-provider/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.ontestautomation.cdct</groupId>
-    <artifactId>addressId-provider</artifactId>
+    <artifactId>address-provider</artifactId>
     <version>1.0.0</version>
 
     <parent>
@@ -22,8 +22,8 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>21</java.version>
         <junit.version>5.9.2</junit.version>
-        <pact.version>4.6.10</pact.version>
-        <lombok.version>1.18.32</lombok.version>
+        <pact.version>4.6.14</pact.version>
+        <lombok.version>1.18.34</lombok.version>
     </properties>
 
     <dependencies>
